znk-exercise-fix-overflow

--- a/src/components/infraWebAppZnkExercise/scss/_question-builder.scss
+++ b/src/components/infraWebAppZnkExercise/scss/_question-builder.scss
@@ -14,7 +14,6 @@ znk-exercise {
         question-builder:not(.answer-explanation-open) {
             .question-basic-style {
                 overflow: auto;
-                height: calc(100% - 50px);
             }
 
             answer-builder {
